Updated index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<html><body><h1>Welcome to Project Vastra's GitHub Pages site!</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Project VASTRA - Home</title>
+</head>
+<body>
+  <h1>Welcome to Project VASTRA</h1>
+  <p>Project VASTRA is a groundbreaking multidisciplinary endeavor that seamlessly blends cutting-edge fabric technology with innovative design principles, ethical considerations, economic viability, environmental responsibility, cultural sensitivity, and the potential for far-reaching collaboration...</p>
+  <p>Explore the various aspects of Project VASTRA through the following sections:</p>
+  <ul>
+    <li><a href="concept-engagement.html">Conceptualization and Engagement</a></li>
+    <li><a href="fabric-tech-design.html">Fabric Technology and Design</a></li>
+    <li><a href="fabric-integrity.html">Structural Integrity and Aesthetics</a></li>
+    <li><a href="compatibility-testing.html">User-Centric Compatibility Testing</a></li>
+    <li><a href="ethical-ai-integration.html">Ethical AI Integration</a></li>
+    <li><a href="inclusive-research.html">Inclusive Research and Validation</a></li>
+    <li><a href="business-models.html">Business Models and Market Viability</a></li>
+    <li><a href="ip-legal-framework.html">Intellectual Property and Legal Framework</a></li>
+    <li><a href="cross-cultural-engagement.html">Cross-Cultural Engagement Strategy</a></li>
+    <li><a href="economic-sustainability.html">Economic and Sustainability Framework</a></li>
+  </ul>
+</body>
+</html>
