Updated index page

--- a/index.html
+++ b/index.html
@@ -2,22 +2,66 @@
 <html>
 <head>
   <title>Project VASTRA - Home</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    .header {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+    .menu {
+      display: flex;
+      justify-content: space-between;
+      background-color: #555;
+      padding: 10px;
+    }
+    .menu a {
+      color: #fff;
+      text-decoration: none;
+      margin-right: 20px;
+    }
+    .content {
+      background-color: #fff;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Project VASTRA</h1>
-  <p>Project VASTRA is a groundbreaking multidisciplinary endeavor that seamlessly blends cutting-edge fabric technology with innovative design principles, ethical considerations, economic viability, environmental responsibility, cultural sensitivity, and the potential for far-reaching collaboration...</p>
-  <p>Explore the various aspects of Project VASTRA through the following sections:</p>
-  <ul>
-    <li><a href="concept-engagement.html">Conceptualization and Engagement</a></li>
-    <li><a href="fabric-tech-design.html">Fabric Technology and Design</a></li>
-    <li><a href="fabric-integrity.html">Structural Integrity and Aesthetics</a></li>
-    <li><a href="compatibility-testing.html">User-Centric Compatibility Testing</a></li>
-    <li><a href="ethical-ai-integration.html">Ethical AI Integration</a></li>
-    <li><a href="inclusive-research.html">Inclusive Research and Validation</a></li>
-    <li><a href="business-models.html">Business Models and Market Viability</a></li>
-    <li><a href="ip-legal-framework.html">Intellectual Property and Legal Framework</a></li>
-    <li><a href="cross-cultural-engagement.html">Cross-Cultural Engagement Strategy</a></li>
-    <li><a href="economic-sustainability.html">Economic and Sustainability Framework</a></li>
-  </ul>
+  <div class="header">
+    <h1>Welcome to Project VASTRA</h1>
+    <p>A Transformative Multidisciplinary Fabric Innovation</p>
+  </div>
+  <div class="container">
+    <div class="menu">
+      <a href="index.html">Home</a>
+      <a href="concept-engagement.html">Conceptualization</a>
+      <a href="fabric-tech-design.html">Fabric Technology</a>
+      <a href="fabric-integrity.html">Structural Integrity</a>
+      <a href="compatibility-testing.html">Compatibility Testing</a>
+      <a href="ethical-ai-integration.html">Ethical AI</a>
+      <a href="inclusive-research.html">Inclusive Research</a>
+      <a href="business-models.html">Business Models</a>
+      <a href="ip-legal-framework.html">IP & Legal</a>
+      <a href="cross-cultural-engagement.html">Cross-Cultural</a>
+      <a href="economic-sustainability.html">Economic & Sustainability</a>
+      <a href="https://github.com/projectvastra/projectvastra.github.io/issues/new">Contact Us</a>
+    </div>
+    <div class="content">
+      <h2>About Project VASTRA</h2>
+      <p>Project VASTRA is a groundbreaking multidisciplinary endeavor that seamlessly blends cutting-edge fabric technology with innovative design principles, ethical considerations, economic viability, environmental responsibility, cultural sensitivity, and the potential for far-reaching collaboration...</p>
+      <!-- Include the original project description here -->
+    </div>
+  </div>
 </body>
 </html>
